--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
-{
+{  
+   "engines":{
+    "node":"v22.11.0"
+   },    
+
   "name": "x",
   "version": "1.0.0",
   "main": "index.js",
@@ -10,10 +14,24 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^1.41.3",
+    "connect": "^3.7.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "joi": "^17.13.3",
     "method-override": "^3.0.0",
-    "mongoose": "^8.16.2"
+    "mongo": "^0.1.0",
+    "mongoose": "^8.16.2",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "node-fetch": "^2.7.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
